--- a/gb/18/10/11/n10776877.md
+++ b/gb/18/10/11/n10776877.md
@@ -1,20 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kvrgis3574/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kvrgis3574/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kvrgis3574/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kvrgis3574/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kvrgis3574/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kvrgis3574/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵交响乐华府首场 “天使声音”在奏鸣</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110109491160-600x400.jpg" />
 <h6>10月10日晚，神韵交响乐团在美国首都地区的斯特拉斯莫尔音乐中心（Music Center at Strathmore）为观众带来了精彩的演出。（李莎／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2018年10月11日讯】（大纪元美国华盛顿DC记者站报导）当最后一个音符圆满奏出，小提琴家郑媛慧用琴弓在空中划出漂亮的弧线，陶醉在乐曲中的观众们浑然忘我，斯特拉斯莫尔音乐中心内爆发出了按捺许久的掌声。</p>
+	<p>【大纪元2018年10月11日讯】（大纪元美国华盛顿DC记者站报导）当最后一个音符圆满奏出，小提琴家用琴弓在空中划出漂亮的弧线，陶醉在乐曲中的观众们浑然忘我，斯特拉斯莫尔音乐中心内爆发出了按捺许久的掌声。</p>
 <p>观众们还在回味《卡门幻想曲》的清新浪漫时，一幅辉煌灿烂的盛唐画卷徐徐打开——庙堂深殿国事，万国来朝称臣，祭天雅乐悠悠，贞观之治流芳万载。气势磅礴的《贞观朝圣》再现了古老中国的黄金时代。</p>
-<p>10月10日晚，<ahref="https://github.com/kvrgis3574/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/kvrgis3574/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在美国马里兰州斯特拉斯莫尔音乐中心（Music Center at Strathmore）演出，为首都华盛顿地区的观众带来了无与伦比的“天外之音”。</p>
-<p>通过<ahref="https://github.com/kvrgis3574/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>原创乐曲和西方经典名章，音乐家们用出神入化的技艺，引领观众纵览古今，遍游中西。独特的诠释和深刻的内涵，让观众在超凡脱俗的精神境界中，收获喜悦和幸福，思索传统文化和道德的根基。</p>
-<figure id="attachment_10776966" aria-describedby="caption-attachment-10776966" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110109091160.jpg"><img class="size-large wp-image-10776966" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110109091160-600x384.jpg" alt="" width="600" b="384" /></a><figcaption id="caption-attachment-10776966" class="wp-caption-text">10月10日晚，神韵<ahref="https://github.com/kvrgis3574/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在美国首都地区的斯特拉斯莫尔音乐中心为观众带来了精彩的演出。图为小提琴演奏家郑媛慧。（李莎／大纪元）</figcaption></figure>
+<p>10月10日晚，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在美国马里兰州斯特拉斯莫尔音乐中心（Music Center at Strathmore）演出，为首都华盛顿地区的观众带来了无与伦比的“天外之音”。</p>
+<p>通过<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>原创乐曲和西方经典名章，音乐家们用出神入化的技艺，引领观众纵览古今，遍游中西。独特的诠释和深刻的内涵，让观众在超凡脱俗的精神境界中，收获喜悦和幸福，思索传统文化和道德的根基。</p>
 <figure id="attachment_10776977" aria-describedby="caption-attachment-10776977" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/AM3A0570.jpg"><img class="size-large wp-image-10776977" src="https://i.epochtimes.com/assets/uploads/2018/10/AM3A0570-600x363.jpg" alt="" width="600" b="363" /></a><figcaption id="caption-attachment-10776977" class="wp-caption-text">图为二胡演奏家戚晓春（第一排右）、王真（中）、于小航。（李莎／大纪元）</figcaption></figure>
 <figure id="attachment_10776975" aria-describedby="caption-attachment-10776975" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/AM3A0623.jpg"><img class="size-large wp-image-10776975" src="https://i.epochtimes.com/assets/uploads/2018/10/AM3A0623-600x384.jpg" alt="" width="600" b="384" /></a><figcaption id="caption-attachment-10776975" class="wp-caption-text">图为女高音歌唱家耿皓蓝。（李莎／大纪元）</figcaption></figure>
 <h2>州议员：神韵音乐带来喜悦和幸福</h2>
-<figure id="attachment_10776986" aria-describedby="caption-attachment-10776986" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-06.jpg"><img class="wp-image-10776986 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-06-450x307.jpg" alt="" width="450" b="307" /></a><figcaption id="caption-attachment-10776986" class="wp-caption-text">马里兰州众议员Benjamin Kramer偕夫人 Cindy Kramer一同观看了2018年10月10日晚，神韵交响乐团在斯特拉斯莫尔音乐中心的音乐会。（苏菲／大纪元）</figcaption></figure>
+<figure id="attachment_10776986" aria-describedby="caption-attachment-10776986" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-06.jpg"><img class="wp-image-10776986 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-06-450x307.jpg" alt="" width="450" b="307" /></a><figcaption id="caption-attachment-10776986" class="wp-caption-text">马里兰州众议员Benjamin Kramer偕夫人 Cindy Kramer一同观看了2018年10月10日晚，神韵<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%A4%E5%93%8D%E4%B9%90.md#1">交响乐</a>团在斯特拉斯莫尔音乐中心的音乐会。（苏菲／大纪元）</figcaption></figure>
 <p>演出前夕，马里兰州和华盛顿DC的多位民选政要为神韵交响乐团颁发褒奖，欢迎神韵交响乐团的到来。马里兰州议会经济事务委员会银行、经济发展与科学技术分会主席Benjamin Kramer议员偕夫人Cindy Kramer一同观看了当晚的演出。</p>
 <p>“这是一个非常有才华的乐团，我很喜欢，音乐特别美。”Kramer议员表示，神韵交响音乐令人振奋，有着强大的能量，“令人振奋、充满活力，聆听这音乐真的非常高兴！”</p>
 <p>“最精彩的东方音乐和出色的西方交响乐团融合一体，华美动人。”Kramer议员感到神韵音乐“非常独特”，让他体验到“一种内在的宁静”。</p>
@@ -23,7 +22,7 @@
 <figure id="attachment_10776992" aria-describedby="caption-attachment-10776992" style="width: 449px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-07.jpg"><img class="size-full wp-image-10776992" src="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-07.jpg" alt="" width="449" b="299" /></a><figcaption id="caption-attachment-10776992" class="wp-caption-text">华盛顿DC“蓝草乐队”的成员Roger Hart感到喜出望外，他认为神韵交响乐团对西方乐曲的诠释“十分完美”。（新唐人电视台）</figcaption></figure>
 <p>欣赏了神韵交响乐团的演出后，华盛顿DC“蓝草乐队”的成员Roger Hart感到喜出望外。他说：“真是没法想像，太好了！演奏充满活力，而且十分美妙。希望大家一定来看！他们简直令人难以置信。看完以后，你会觉得特别高兴。”</p>
 <p>乐团对西方经典乐曲的精准演绎让Hart印象深刻。“可以说，这个交响乐团真是太出色了！很高兴能来看演出，我觉得非常惊喜，没想到能听到瓦格纳的作品和《睡美人》这样的乐曲，他们演奏得很棒，把握得十分完美。”</p>
-<h2>华人乐迷：从音乐中感受<ahref="https://github.com/kvrgis3574/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%96%87%E5%8C%96.md#1">中国文化</a>和传统道德</h2>
+<h2>华人乐迷：从音乐中感受<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E6%96%87%E5%8C%96.md#1">中国文化</a>和传统道德</h2>
 <figure id="attachment_10776996" aria-describedby="caption-attachment-10776996" style="width: 449px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-08.jpg"><img class="wp-image-10776996 size-full" src="https://i.epochtimes.com/assets/uploads/2018/10/20181011-HUAMING-SHEN-YUN-08.jpg" alt="" width="449" b="299" /></a><figcaption id="caption-attachment-10776996" class="wp-caption-text">爱好古典音乐的成甲元先生第一次看到包含中国乐曲的交响乐团，感到非常兴奋，神韵乐曲的精神内涵让他印象深刻。（新唐人电视台）</figcaption></figure>
 <p>在美国食品药品监督管理局工作的成甲元先生是一位古典音乐发烧友，“看了一辈子西洋古典音乐演出”，第一次看到由中国乐器领衔的交响乐团，他感到特别兴奋，“这个绝对要推广，绝对要推广的，因为这是中西合璧。西洋音乐有大调小调，但是中国音色，乐器的音色非常独特，像琵琶、胡琴这种，都是中国非常独特的东西。我们一定要多多推广。”</p>
 <p>“（乐团）水准很高，你看指挥都不必动手，他们都会自己演奏，这段很过瘾，是一个高潮。今天很荣幸能够来看。”成甲元和妻子已经决定，要接着去看神韵交响乐团本周日下午（10月14日）在华盛顿DC肯尼迪艺术中心的演出，再次深入地感受神韵音乐。</p>
@@ -44,7 +43,7 @@
 <h2>“她绝对是一位名家！”</h2>
 <p>“很精彩，非常出色！他们都是训练有素的音乐家，有着不可思议的同步性，真的是完美，完美无瑕。”Jane DeVane医生对神韵交响乐团连连赞叹道。</p>
 <p>DeVane女士和丈夫Greg Evans一起观看了演出。Evans是美国农业部的昆虫专家，他对音乐有着浓厚兴趣。他说：“融合得恰到好处，每位演奏家都精通自己的乐器，由一位了不起的指挥家将他们整合到一起。我们度过了一个美好的夜晚。”</p>
-<p>Evans说，演出中有一些他从没见过的乐器，令他大开眼界，而小提琴家郑媛慧的独奏更是让人印象深刻。他说：“那位小提琴独奏的女士，真是让人叹服，简直不可思议。我以前从没感受过这样的演出。我不知道她的名字，但我相信她绝对是一位名家！”</p>
+<p>Evans说，演出中有一些他从没见过的乐器，令他大开眼界，而小提琴家的独奏更是让人印象深刻。他说：“那位小提琴独奏的女士，真是让人叹服，简直不可思议。我以前从没感受过这样的演出。我不知道她的名字，但我相信她绝对是一位名家！”</p>
 <p>Devane医生还是一位业余舞蹈表演者，热爱艺术的夫妻二人期待明年能够观看神韵艺术团的舞蹈演出。#</p>
 <figure id="attachment_10777079" aria-describedby="caption-attachment-10777079" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/1810110110131160.jpg"><img class="size-large wp-image-10777079" src="https://i.epochtimes.com/assets/uploads/2018/10/1810110110131160-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10777079" class="wp-caption-text">全体演员谢幕。（李莎/大纪元）</figcaption></figure>
 <p>责任编辑：苏漾</p>
@@ -53,43 +52,42 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/8/8/n10624669.md#1">访声乐大赛评委天歌：用中文唱美声最动人</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/9/14/n10715285.md#1">科大学院院长：神韵音乐有神助 非人能及</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/9/15/n10716621.md#1">聆赏神韵交响乐 总经理：遍览古今中外文史</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/9/18/n10722032.md#1">神韵音乐充满阳光正能量 执行长：仿佛被音疗</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/9/19/n10726541.md#1">神韵“传递上天的声音”台北中山堂欢声雷动</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/9/23/n10734389.md#1">公司董座赞佩：神韵是宇宙很重要能量来源</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/14/n10715285.md#1">科大学院院长：神韵音乐有神助 非人能及</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/15/n10716621.md#1">聆赏神韵交响乐 总经理：遍览古今中外文史</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/18/n10722032.md#1">神韵音乐充满阳光正能量 执行长：仿佛被音疗</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/19/n10726541.md#1">神韵“传递上天的声音”台北中山堂欢声雷动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/9/23/n10734389.md#1">公司董座赞佩：神韵是宇宙很重要能量来源</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/14/n13020876.md#1">【命理】功名有无 寿命长短 都是上天给的</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/26/n13049818.md#1">专访戴维斯：如奥威尔式 美科技平台审查内幕</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/26/n13049310.md#1">【财商天下】逆天生物实验 中共奔向终极目的？</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13047893.md#1">【财商天下】经济复苏强劲 美联储何时加息？</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13048225.md#1">华春莹“反习”后 赵立坚“反党”言论引议</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13046482.md#1">【特稿】一场中共不想让您看的演出</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13046359.md#1">避免体重增加 先避免两种常见的饮食习惯</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/24/n13045511.md#1">杜汶泽聘用《苹果》失业员工 港人直呼感动</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13046498.md#1">SEVENTEEN迷你八辑 创2021年最高首周销量纪录</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13048292.md#1">关晓彤路透照被指像大爷遛弯 小演员帮澄清</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13048070.md#1">蔡少芬一手抱娃一手做饭 站姿霸气也逗趣</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13048432.md#1">邓超不被女儿接受讲故事 缘于孙俪一搞笑爆料</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/23/n13042990.md#1">2种食物是“天然补血剂” 这样吃效果最好</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13048027.md#1">牙周病是吃出来的？3类食物可能是元凶</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/kvrgis3574/djy/blob/master/gb/21/6/24/n13043453.md#1">打疫苗不想出现严重副作用？施打后注意4件事</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kvrgis3574/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kvrgis3574/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/11/n10776877.htm">神韵交响乐华府首场 “天使声音”在奏鸣</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/11/n10776877.htm">神韵交响乐华府首场 “天使声音”在奏鸣</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kvrgis3574/djy/blob/master/gb/18/10/11/n10776877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kvrgis3574/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kvrgis3574/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kvrgis3574/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kvrgis3574/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvrgis3574/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/10/11/n10776877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
